--- a/style.css
+++ b/style.css
@@ -1,4 +1,145 @@
-*{
-    background-color: #AAAAAA11;
-    outline: red solid 1px;
-  }
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+body {
+  font-family: 'Raleway', sans-serif;
+  padding: 0;
+  margin: 0;
+}
+main {
+  padding: 0 50px;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+nav {
+  font-weight: 400;
+  font-size: 16px;
+}
+h1 {
+  font-size: 22px;
+  font-weight: 700;
+}
+h2 {
+  font-size: 16px;
+  font-weight: 400;
+}
+p {
+  font-size: 18px;
+  font-weight: 700;
+}
+h3 {
+  font-weight: 700;
+  font-size: 22px;
+}
+button {
+  font-size: 17px;
+  font-weight: 700;
+}
+button i {
+  color: #0065FC;
+}
+h4 {
+  font-size: 18px;
+  font-weight: 700;
+}
+.card_caption {
+  font-weight: 700;
+  font-size: 16px;
+}
+li {
+  font-weight: 400;
+  font-size: 16px;
+}
+/* NAVBAR */
+.booki {
+  width: 67.09px;
+  height: 19px;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 44px;
+  padding-bottom: 67.9px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4px;
+}
+#item1 {
+  padding-left: 55px;
+}
+#item2 {
+  padding-right: 67px;
+}
+#item3 {
+  padding-right: 77px;
+}
+/* MAIN */
+h1 {
+  margin-bottom: 8px;
+}
+h2 {
+  margin-bottom: 34px;
+}
+/* SEARCHBAR */
+.searchbar {
+  display: flex;
+  flex-direction: row;
+  padding-left: 5px;
+  width: 332px;
+  height: 49px;
+  border-radius: 15px;
+  align-items: center;
+}
+.button i {
+  width: 14px;
+  height: 18px;
+  padding-top: 16px;
+  padding-bottom: 15px;
+  padding-left: 18px;
+  padding-right: 18px;
+  background-color: #f2f2f2;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+.searchbox input{
+  background-color: #ffffff;
+  width: 332px;
+  height: 49px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 17px;
+  padding-right: 88px;
+  line-height: 21.13px;
+  font-weight: 700;
+  border: 1px solid #f2f2f2;
+}
+.searchbutton input {
+  width: 132px;
+  height: 49px;
+  left: 341px;
+  top: 200px;
+  background-color: #0065FC;
+  border-radius: 0px 15px 15px 0px;
+  font-weight: 700;
+  font-size: 18px;
+  color: #ffffff;
+}
+/* FILTRES */
+.filters {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+button {
+  background-color: #ffffff;
+  padding-top: 14px;
+  padding-bottom: 16px;
+  border-radius: 15px;
+}
+button i {
+  padding-right: 10 px;
+}
