--- a/style.css
+++ b/style.css
@@ -1,240 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
+*{
+  background-color: #AAA1;
+  outline: red solid 1px;
+}
 body {
   font-family: "Raleway", sans-serif;
   padding: 0;
   margin: 0;
 }
-main {
-  padding: 0 50px;
-}
 a {
   text-decoration: none;
-  color: black;
-}
-nav {
-  font-weight: 400;
-  font-size: 16px;
-}
-h1 {
-  font-size: 22px;
-  font-weight: 700;
-}
-h2 {
-  font-size: 16px;
-  font-weight: 400;
-}
-p {
-  font-size: 18px;
-  font-weight: 700;
-}
-h3 {
-  font-weight: 700;
-  font-size: 22px;
-}
-h4 {
-  font-size: 18px;
-  font-weight: 700;
-}
-.card_caption {
-  font-weight: 700;
-  font-size: 16px;
-}
-ul {
-  list-style: none;
-}
-/* NAVBAR */
-.booki {
-  width: 67.09px;
-  height: 19px;
-}
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-top: 44px;
-  padding-bottom: 67.9px;
-}
-nav {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 4px;
-}
-#item1 {
-  padding-left: 55px;
-}
-#item2 {
-  padding-right: 67px;
-}
-#item3 {
-  padding-right: 77px;
-}
-/* MAIN */
-h1 {
-  margin-bottom: 8px;
-}
-h2 {
-  margin-bottom: 34px;
-}
-/* SEARCHBAR */
-.searchbar {
-  display: flex;
-  flex-direction: row;
-  padding-left: 5px;
-  width: 332px;
-  height: 49px;
-  align-items: center;
-}
-.button i {
-  width: 14px;
-  height: 18px;
-  padding-top: 16px;
-  padding-bottom: 15px;
-  padding-left: 18px;
-  padding-right: 18px;
-  background-color: #f2f2f2;
-  border-style: solid;
-  border-color: #f2f2f2;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-}
-.searchbox input {
-  background-color: #ffffff;
-  width: 332px;
-  height: 49px;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  padding-left: 17px;
-  font-weight: 700;
-  border-style: solid;
-  border-left: none;
-  border-right: none;
-  border-color: #f2f2f2;
-}
-.searchbutton input {
-  width: 132px;
-  height: 49px;
-  left: 341px;
-  top: 200px;
-  background-color: #0065fc;
-  border-style: solid;
-  border-color: #0065fc;
-  border-radius: 0px 15px 15px 0px;
-  font-weight: 700;
-  font-size: 18px;
-  color: #ffffff;
-}
-/* FILTRES */
-.filters {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding-top: 46px;
-  padding-bottom: 54px;
-}
-.filters ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-.filters li {
-  font-size: 17px;
-  font-weight: 700;
-  padding: 10px;
-  border: 2px solid #d9d9d9;
-  border-radius: 25px;
-}
-.filters i {
-  color: #0065fc;
-}
-.filters #filter_1 {
-  padding-right: 87px;
-}
-.filters #filter_2 {
-  padding-right: 80px;
-}
-.filters #filter_3 {
-  padding-right: 76px;
-}
-/* INFO */
-.infobar i {
-  background-color: #ffffff;
-  width: 24px;
-  height: 24px;
-  color: #0065fc;
-  text-align: center;
-  border: 1px solid #f2f2f2;
-  border-radius: 50%;
-}
-/* CARDS */
-.cards {
-  display: flex;
-  flex-direction: row;
-}
-#cards_title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-#cards_1 {
-  width: 880px;
-  height: 626px;
-  background-color: #f2f2f2;
-  border: 20px solid #f2f2f2;
-  border-radius: 20px;
-}
-#more {
-  text-align: left;
-}
-#cards1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 31px;
-}
-.cards p {
-  text-align: left;
-}
-#card {
-  width: 246px;
-  height: 199px;
-  background-color: #ffffff;
-  border: 5px solid #ffffff;
-  align-items: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-}
-.cards i {
-  color: #0065fc;
-}
-#card img {
-  object-fit: cover;
-  width: 246px;
-  height: 124px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-}
-#cards_2 {
-  position: absolute;
-  background-color: #f2f2f2;
-  width: 420px;
-  height: 625px;
-  border: 5px solid #f2f2f2;
-  border-radius: 20px;
-}
-#cards2 {
-  display: flex;
-}
-#card2 {
-  width: 343px;
-  height: 144px;
-}
-#card2 img{
-object-fit: cover;
-width: 137px;
-height: 144px;
-}
-#card_caption {
-  flex: 1;
 }
