--- a/style.css
+++ b/style.css
@@ -1,13 +1,338 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-*{
-  background-color: #AAA1;
-  outline: red solid 1px;
-}
-body {
-  font-family: "Raleway", sans-serif;
-  padding: 0;
-  margin: 0;
-}
-a {
-  text-decoration: none;
-}
+  body {
+    max-width: 100%;
+    font-family: "Raleway", sans-serif;
+    padding: 0;
+    margin: 0;
+  }
+  a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: lighter;
+    color: black;
+  }
+  ul {
+    list-style-type: none;
+  }
+  h1,h4 {
+    font-weight: bold;
+    font-size: 22px;
+  }
+  h2 {
+    font-weight: normal;
+    font-size: 16px;
+  }
+  h3 {
+    font-weight: bold;
+    font-size: 18px;
+  }
+  h5 {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 0;
+  }
+  i {
+    color: #0065FC;
+  }
+  p {
+    margin: 0;
+  }
+  .score_container {
+    margin: 0;
+    width: 68px;
+    height: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .top_container {
+    margin: 126px 0px 46px 55px;
+  }
+  /* HEADER */
+  header {
+    margin: 44px 77px 53px 55px;
+  }
+  header img {
+    width: 61.09px;
+    height: 19px;
+    object-fit: contain;
+  }
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  nav {
+    gap: 67px;
+    display: flex;
+  }
+  nav a:hover {
+    border: 2px solid #0065FC;
+    color: #0065FC;
+  }
+  /* MAIN-SEARCHBAR */
+  .searchbar {
+    display: flex;
+    align-items: center;
+  }
+  form {
+    width: 322px;
+    height: 49px;
+    display: flex;
+  }
+  .searchbar i {
+    color: black;
+    background-color: #f2f2f2;
+    border: 1px solid #F2F2F2;
+    border-radius: 15px 0px 0px 15px;
+    padding: 18px 18px 16px 15px;
+  }
+  .searchbar input {
+    font-size: 18px;
+    font-weight: bold;
+    background-color: white;
+    border: 1px solid #F2F2F2;
+    padding: 17px 0px 14px 14px;
+  }
+  .searchbar button {
+    background-color: #0065FC;
+    font-weight: bold;
+    font-size: 18px;
+    border: 1px solid #0065FC;
+    border-radius: 0px 15px 15px 0px;
+    padding: 14px 14px 16px 16px;
+    color: white;
+  }
+  /* FILTERBAR */
+  .filterbar {
+    width: 914px;
+    height: 50px;
+    align-items: center;
+    font-weight: bold;
+    margin-left: 62px;
+    margin-bottom: 53px;
+    display: flex;
+  }
+  main ul {
+    display: flex;
+    flex-direction: row ;
+    gap: 40px;
+  }
+  li span {
+    border: 2px solid #D9D9D9;
+    border-radius: 25px;
+    padding: 14px 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .filter_1 {
+    gap: 14.56px;
+  }
+  li span:hover {
+    background-color: #DEEBFF;
+  }
+  main li {
+    font-size: 17px;
+  }
+  .infobar {
+    width: 447px;
+    height: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    font-weight: normal;
+    font-size: 16px;
+    margin-left: 49px;
+    margin-bottom: 37px;
+  }
+  .infobar span{
+    width: 24px;
+    height: 24px;
+    border: 1px solid #D9D9D9;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+  }
+  .infobar i {
+    padding: 7px 7px 10px 10px;
+  }
+  /* CARDS */
+  .hotels {
+    width: 1340px;
+    height: 626px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    margin-left: 50px;
+    margin-bottom: 60px;
+  }
+  /* HEBERGEMENTS */
+  .hebergements {
+    background-color: #F2F2F2;
+    width: 880px;
+    height: 626px;
+    border: 10px solid #F2F2F2;
+    border-radius: 20px;
+    padding-left: 40px;
+  }
+  .hebergements h4 {
+    padding-bottom: 23px;
+  }
+  .hebergements h3 {
+    padding-left: 4px;
+    padding-top: 40px;
+  }
+  .hebergements_cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .card {
+    width: 246px;
+    height: 199px;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  .card img {
+    height: 114px;
+    border: 5px solid #FFFFFF;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+  }
+  .card_info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-bottom: 11px;
+    padding-left: 16px;
+    gap: 9px;
+  }
+  /* POPULAIRES */
+  .popular {
+    width: 420px;
+    height: 625px;
+    background-color: #F2F2F2;
+    border: 10px solid #F2F2F2;
+    border-radius: 20px;
+  }
+  .popular_cards {
+    display: flex;
+    flex-direction: column;
+    gap: 33px;
+    padding-left: 37px;
+    padding-right: 40px;
+  }
+  .card_title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 37px;
+    padding-right: 40px;
+  }
+  .popular_card {
+    width: 343px;
+    height: 144px;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  .popular_card_info {
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
+    padding-top: 16px;
+    gap: 7px;
+    padding-bottom: 12px;
+  }
+  .popular_card_info .score_container {
+    padding-top: 44px;
+    width: 68px;
+    height: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .popular_card img {
+    width: 137px;
+    height: 134px;
+    border: 5px solid #FFFFFF;
+    border-radius: 20px 0px 0px 20px;
+    object-fit: cover;
+  }
+  /* ACTIVITES */
+  .activites {
+    width: 1337px;
+    height: 493px;
+    background-color: white ;
+    margin-left: 50px;
+    margin-bottom: 61px;
+  }
+  .activites_cards {
+    display: flex;
+    flex-direction: row;
+    gap: 43px;
+  }
+  .activites_card1 {
+    width: 302px;
+    height: 444.51px;
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  .activites_card2 {
+    width: 302px;
+    height: 445px;
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  .activites img {
+    width: 302px;
+    height: 389px;
+    object-fit: cover;
+    border: 1px solid white;
+    border-radius: 20px 20px 0px 0px;
+  }
+  .activites_card_info {
+    padding-top: 20px;
+    padding-left: 19px;
+    align-items: center;
+  }
+  /* FOOTER */
+  footer {
+    width: 1339px;
+    height: 225px;
+    background-color: #F2F2F2;
+    margin-left: 48px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 82px;
+  }
+  footer ul {
+    margin-bottom: 20px;
+    padding: 0;
+  }
+  footer li {
+    margin-bottom: 12px;
+  }
+  .footer_links {
+    margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+  }
