--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
   body {
-    max-width: 100%;
+    width: 100%;
     font-family: "Raleway", sans-serif;
     padding: 0;
     margin: 0;
@@ -36,6 +36,9 @@
   }
   p {
     margin: 0;
+  }
+  ::placeholder {
+    color: black;
   }
   .score_container {
     margin: 0;
@@ -160,8 +163,6 @@
   }
   /* CARDS */
   .hotels {
-    width: 1340px;
-    height: 626px;
     display: flex;
     flex-direction: row;
     gap: 40px;
@@ -272,8 +273,6 @@
   }
   /* ACTIVITES */
   .activites {
-    width: 1337px;
-    height: 493px;
     background-color: white ;
     margin-left: 50px;
     margin-bottom: 61px;
@@ -283,16 +282,7 @@
     flex-direction: row;
     gap: 43px;
   }
-  .activites_card1 {
-    width: 302px;
-    height: 444.51px;
-    background-color: white;
-    border: 5px solid white;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  .activites_card2 {
+  .activites_card {
     width: 302px;
     height: 445px;
     background-color: white;
@@ -335,4 +325,150 @@
     margin-top: 45px;
     display: flex;
     flex-direction: column;
+  }
+  @media only screen and (min-width:768px) and (max-width:992px) {
+    body {
+      width: 100%;
+      height: 2076px;
+    }
+    .hotels {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 53px;
+    }
+    .popular {
+      width: 883px;
+      height: 278px;
+    }
+    .card_title {
+      display: flex;
+     
+    }
+    .popular h5 {
+      font-size: 14px;
+    }
+    .popular p {
+      font-size: 13px;
+    }
+    .popular_cards {
+      display: flex;
+      flex-direction: row;
+    }
+    .activites {
+      width: 880px;
+    }
+    .activites_card1 {
+      width: 182px;
+      height: 267px;
+    }
+    .activites_cards img {
+      width: 182px;
+      height: 211px;
+      object-fit: cover;
+    }
+    footer {
+      width: 879.65px;
+      height: 225px;
+    }
+  }
+  @media only screen and (max-width:768px) {
+    body {
+      width: 100%;
+      height: 4113px;
+    }
+    header {
+      margin: 21px 65px 0px 33px;
+      width: 298px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .top_container {
+      margin: 31px 57px 34px 20px;
+      width: 298px;
+    }
+    .filterbar {
+      margin-left: 20px;
+      margin-bottom: 40px;
+    }
+    .filterbar li {
+      width: 160px;
+      height: 50px;
+      font-size: 11px;
+      font-weight: bold
+    }
+    .infobar {
+      margin-left: 20px;
+      margin-bottom: 20px;
+    }
+    .infobar p {
+      width: 298px;
+      height: 57px;
+    }
+    .hotels {
+      display: flex;
+      flex-direction: column-reverse;
+      margin: 0;
+      gap: 0;
+    }
+    .popular {
+      border: 0;
+      border-radius: 0px;
+      margin: 0;
+    }
+    .hebergements {
+      height: 1430px;
+      background-color: #FFFFFF;
+      border: 0;
+      margin: 0;
+      padding-left: 20px;
+      padding-bottom: 105px;
+    }
+    .card {
+      width: 335px;
+      height: 199px;
+    }
+    .hebergements_cards {
+      flex-direction: column;
+    }
+    .hebergements h4 {
+      color: #FFFFFF;
+    }
+    .activites {
+      margin: 0;
+      padding-left: 22px;
+      padding-bottom: 80px;
+    }
+    .activites_title {
+      width: 106px;
+    }
+    .activites_cards {
+      flex-direction: column;
+    }
+    .activites_cards img {
+      width: 334px;
+      height: 134px;
+      border: 0;
+    }
+    .activites_card {
+      width: 334px;
+      height: 190px;
+      border: 0;
+    }
+    footer {
+      width: 377px;
+      height: 501px;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+    }
+    footer ul {
+      margin: 0;
+    }
+    .footer_links {
+      margin-top: 0;
+      margin-left: 30px;
+    }
   }
