--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,14 +34,18 @@
     font-weight: bold;
     display: flex;
   }
+  main li {
+    font-size: 1.06em;
+  }
   main ul {
     display: flex;
     flex-direction: row;
-    width: 55%;
+    width: 60%;
     justify-content: space-between;
+    padding-inline-start: 1em;
   }
   .infobar {
-    width: 40%;
+    width: 33%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -50,18 +54,25 @@
     font-size: 1em;
   }
   .hotels {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     gap: 2.5em;
-    width: 100%;
+    flex-wrap: wrap;
+  }
+  section {
+    background-color: #F2F2F2;
+    border: 10px solid #F2F2F2;
+    border-radius: 20px;
   }
   .hebergements {
     width: 60%;
-    height: auto;
+    padding-left: 1.5em;
   }
   .popular {
-    width: 40%;
-    height: auto;
+    width: 30%;
+    padding-left: 1.5em;
   }
   a {
     text-decoration: none;
@@ -158,6 +169,9 @@
     color: transparent;
   }
   /* FILTERBAR */
+  li, li i {
+    padding-inline: inherit;
+  }
   li span {
     border: 2px solid #D9D9D9;
     border-radius: 25px;
@@ -168,19 +182,16 @@
   li span:hover {
     background-color: #DEEBFF;
   }
-  main li {
-    font-size: 1.06em;
-  }
   .infobar span{
-    width: 24px;
-    height: 24px;
+    padding: 0.8em;
+    height: auto;
     border: 1px solid #D9D9D9;
     border-radius: 50%;
     display: flex;
     align-items: center;
   }
   .infobar i {
-    padding: 7px 7px 10px 10px;
+    margin: auto;
   }
   /* CARDS */
   img {
@@ -194,31 +205,19 @@
     color: #F2F2F2;
   }
   /* SECTION */
-  section {
-    background-color: #F2F2F2;
-    border: 10px solid #F2F2F2;
-    border-radius: 20px;
-  }
   .hotel_images {
     border: 5px solid #FFFFFF;
   }
   /* HEBERGEMENTS */
-  .hebergements h4 {
-    padding-bottom: 23px;
-  }
-  .hebergements h3 {
-    padding-left: 4px;
-    padding-top: 40px;
-  }
   .hebergements_cards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 2em;
   }
   .card {
-    width: 246px;
-    height: 199px;
+    width: 30%;
+    height: 15%;
     background-color: white;
     border-radius: 20px;
     display: flex;
@@ -227,35 +226,30 @@
     transition: 0.3s;
   }
   .card img {
-    height: 114px;
+    height: 8vh;
   }
   .card_info {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-bottom: 11px;
-    padding-left: 16px;
-    gap: 9px;
+    gap: 0.5em;
   }
   /* POPULAIRES */
   .popular_cards {
     display: flex;
     flex-direction: column;
-    gap: 33px;
-    padding-left: 37px;
-    padding-right: 40px;
+    gap: 2em;
   }
   .card_title {
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-left: 37px;
-    padding-right: 40px;
   }
   .popular_card {
-    width: 343px;
-    height: 144px;
+    width: 90%;
+    height: 10vh;
     background-color: white;
     border-radius: 20px;
     display: flex;
@@ -266,29 +260,20 @@
   .popular_card_info {
     display: flex;
     flex-direction: column;
-    padding-left: 15px;
-    padding-top: 16px;
-    gap: 7px;
-    padding-bottom: 12px;
   }
   .popular_card_info .score_container {
-    padding-top: 44px;
-    width: 68px;
-    height: 12px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
   }
   .popular_card img {
-    width: 137px;
-    height: 134px;
+    width: 35%;
+    height: 90%;
     border-radius: 20px 0px 0px 20px;
   }
   /* ACTIVITES */
   .activites {
     background-color: white ;
-    margin-left: 50px;
-    margin-bottom: 61px;
   }
   .activites_cards {
     display: flex;
