--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-  *{
-    background-color: #AAA1;
-    outline: red solid 1px;
-  }
   body {
     width: 100%;
     font-family: "Raleway", sans-serif;
@@ -15,6 +11,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin: auto;
+    margin-top: 3em;
   }
   nav {
     width: 25%;
@@ -27,12 +24,14 @@
   }
   .top_container {
     margin: auto;
+    margin-top: 5em;
   }
   .filterbar {
     width: auto;
     align-items: center;
     font-weight: bold;
     display: flex;
+    margin-top: 1em;
   }
   main li {
     font-size: 1.06em;
@@ -52,6 +51,7 @@
     align-items: center;
     font-weight: normal;
     font-size: 1em;
+    margin-top: 1em;
   }
   .hotels {
     width: 100%;
@@ -60,6 +60,7 @@
     flex-direction: row;
     gap: 2.5em;
     flex-wrap: wrap;
+    margin-top: 3em;
   }
   section {
     background-color: #F2F2F2;
@@ -121,10 +122,10 @@
     object-fit: contain;
   }
   nav a span {
-    padding-top: 44px;
+    padding-top: 2.9em;
     border-top: 2px solid transparent;
-    padding-left: 24.5px;
-    padding-right: 24.5px;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
   }
   nav a span:hover {
     border-top: 2px solid #0065FC;
@@ -291,6 +292,7 @@
     height: auto;
     background-color: white ;
     flex-wrap: wrap;
+    margin-top: 5em;
   }
   .activites_cards {
     display: flex;
@@ -316,6 +318,7 @@
     height: auto;
     background-color: #F2F2F2;
     margin: auto;
+    margin-top: 5em;
   }
   .footer_container {
     display: flex;
@@ -334,3 +337,4 @@
     gap: 1em;
   }
   /* MEDIA QUERIES */
+  
