--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     margin: auto;
     margin-top: 3em;
+    flex-wrap: wrap;
   }
   nav {
     width: 25%;
@@ -59,7 +60,6 @@
     display: flex;
     flex-direction: row;
     gap: 2.5em;
-    flex-wrap: wrap;
     margin-top: 3em;
   }
   section {
@@ -118,7 +118,7 @@
   }
   /* HEADER */
   header img {
-    width: 33%;
+    width: 5em;
     object-fit: contain;
   }
   nav a span {
@@ -172,6 +172,7 @@
     padding-inline: inherit;
   }
   li span {
+    width: 95%;
     border: 2px solid #D9D9D9;
     border-radius: 25px;
     padding: 0.5em;
@@ -225,8 +226,8 @@
     transition: 0.3s;
   }
   .card img {
-    width: 15.75vw;
-    height: 13.25vh;
+    width: 95%;
+    height: 60%;
   }
   .card_info {
     display: flex;
@@ -234,6 +235,7 @@
     flex-wrap: wrap;
     gap: 0.25em;
     width: 90%;
+    height: 40%;
     margin: auto;
   }
   /* POPULAIRES */
@@ -241,6 +243,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5em;
+    height: 100%;
   }
   .card_title {
     width: 90%;
@@ -251,12 +254,12 @@
   }
   .popular_card img {
     width: 35%;
-    height: 93%;
+    height: 92%;
     border-radius: 20px 0px 0px 20px;
   }
   .popular_card {
     width: 90%;
-    height: 16.5vh;
+    height: 24%;
     background-color: white;
     border-radius: 20px;
     display: flex;
@@ -347,6 +350,9 @@
     .infobar {
       width: 47%;
     }
+    .hotels {
+      flex-wrap: wrap;
+    }
     .hebergements {
       width: 95%;
     }
@@ -393,5 +399,161 @@
     .activites h5 {
       margin-left: 1em;
       width: 70%;
+    }
+    .footer_container {
+      width: 80%;
+      gap: 7em;
+      padding-top: 2em;
+      padding-bottom: 2em;
+    }
+  }
+  @media only screen and (min-device-width: 0) and (max-device-width: 768px) {
+    header {
+      flex-direction: column;
+      margin: 0;
+      margin-top: 1em;
+    }
+    .header_logo {
+      width: 10%;
+      margin: auto;
+    }
+    nav {
+      margin-top: 3em;
+      font-size: 1.1em;
+    }
+    nav a span {
+      padding-bottom: 1.5em;
+      padding-left: 1.75em;
+      padding-right: 4.9em;
+      border-top: 0;
+      border-bottom: 2px solid #F2F2F2;
+    }
+    nav a span:hover {
+      border-top: 0;
+      border-bottom: 2px solid #0065FC;
+    }
+    h1 {
+      font-size: 1.75em;
+    }
+    form {
+      height: 3.25em;
+    }
+    form span {
+      display: none;
+    }
+    form .fa-magnifying-glass {
+      color: white;
+    }
+    .searchbar input {
+      font-size: 1.2em;
+      padding-right: 2.5em;
+    }
+    .filterbar {
+      flex-direction: column;
+    }
+    .filterbar h3 {
+      align-self: flex-start;
+    }
+    main ul {
+      width: 100%;
+      align-self: flex-start;;
+      flex-wrap: wrap;
+      gap: 1em;
+      padding: 0;
+    }
+    .filterbar p {
+      font-size: 0.7em;
+    }
+    .filterbar span {
+      width: 9em;
+    }
+    .filterbar i {
+      font-size: 1.15em;
+      padding: 0.25em;
+    }
+    .infobar {
+      width: 85%;
+    } 
+    .hotels {
+      flex-direction: column-reverse;
+    }
+    .popular {
+      width: 100%;
+      padding-left: 0;
+      padding-bottom: 2em;
+      border-radius: 0;
+    }
+    .popular_cards {
+      width: 100%;
+    }
+    .popular_card {
+      width: 100%;
+      height: 23vh;
+    }
+    .card_info_text {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+    }
+    .popular_card_info {
+      width: 50%;
+      height: 75%;
+    }
+     h5 {
+      font-size: 1.1em;
+    }
+    .hebergements {
+      width: 100%;
+      background-color: white;
+      border: 0;
+      padding-left: 0;
+    }
+    .hebergements_cards {
+      flex-direction: column;
+      width: 100%;
+    }
+    .card {
+      width: 100%;
+      height: 34vh;
+    }
+    .card img {
+      width: 97%;
+    }
+    .card_info {
+      height: 30%;
+    }
+    .more {
+      display: none;
+    }
+    .activites_title {
+      width: 50%;
+    }
+    .activites_title h4 {
+      margin-bottom: 0;
+    }
+    .activites_cards {
+      flex-direction: column;
+      height: 100%;
+    }
+    .activites_card {
+      width: 100%;
+      height: 34vh;
+    }
+    .activites img {
+      height: 70%;
+    }
+    .activites_card h5 {
+      padding-top: 1.25em;
+    }
+    footer {
+      margin: 0;
+      margin-top: 5em;
+      width: 85%;
+      padding: 2em;
+    }
+    .footer_container {
+      flex-direction: column;
+      gap: 1em;
     }
   }
