--- a/CSS/style.css
+++ b/CSS/style.css
@@ -240,6 +240,7 @@
   }
   /* POPULAIRES */
   .popular_cards {
+    width: 95%;
     display: flex;
     flex-direction: column;
     gap: 1.5vw;
@@ -254,7 +255,7 @@
   }
   .popular_card img {
     width: 35%;
-    height: 92%;
+    height: 90%;
     border-radius: 20px 0px 0px 20px;
   }
   .popular_card {
@@ -380,13 +381,14 @@
     }
     .card {
       min-height: 20vh;
+      max-width: 30.5%;
     }
     .card img {
       max-height: 12.25vh;
     }
     .popular {
       width: 95%;
-      height: 36vh;
+      height: 30vh;
     }
     .popular_cards {
       flex-direction: row;
@@ -398,7 +400,7 @@
     }
     .popular_card img {
       width: 40%;
-      height: 92%;
+      height: 90%;
     }
     .popular_card_info {
       height: 12vh;
@@ -522,7 +524,7 @@
     .infobar {
       width: 90%;
       margin: auto;
-      margin-top: 4vw;
+      margin-top: 8vw;
     } 
     .hotels {
       flex-direction: column-reverse;
