--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,622 +1,31 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
   body {
-    width: 100%;
+    max-width: 1400px;
     font-family: "Raleway", sans-serif;
-    padding: 0;
-    margin: 0;
   }
-  header {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: auto;
-    margin-top: 3em;
-    flex-wrap: wrap;
-  }
-  nav {
-    width: 25%;
-    display: flex;
-    justify-content: space-between;
-  }
-  main {
-    width: 90%;
-    margin: auto;
-  }
-  .top_container {
-    margin: auto;
-    margin-top: 5em;
-  }
-  .filterbar {
-    width: auto;
-    align-items: center;
-    font-weight: bold;
-    display: flex;
-    margin-top: 1em;
-  }
-  main li {
-    font-size: 1.06em;
-  }
-  main ul {
-    display: flex;
-    flex-direction: row;
-    min-width: 60%;
-    justify-content: space-between;
-    padding-inline-start: 1em;
-  }
-  .infobar {
-    min-width: 33%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-weight: normal;
-    font-size: 1em;
-    margin-top: 1em;
-  }
-  .hotels {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 2.5em;
-    margin-top: 3em;
-  }
-  section {
-    background-color: #F2F2F2;
-    border: 10px solid #F2F2F2;
-    border-radius: 20px;
-  }
-  .hebergements {
-    width: 60%;
-    padding-left: 1.5em;
-  }
-  .popular {
-    width: 30%;
-    padding-left: 1.5em;
-  }
+  /* POLICES */
   a {
     text-decoration: none;
-    font-size: 1em;
-    font-weight: lighter;
-    color: black;
-  }
-  ul {
-    list-style-type: none;
-  }
-  h1,h4 {
-    font-weight: bold;
-    font-size: 1.375em;
-  }
-  h2 {
-    font-weight: normal;
-    font-size: 1em;
-  }
-  h3 {
-    font-weight: bold;
-    font-size: 1.1em;
-  }
-  h5 {
-    font-weight: bold;
-    font-size: 1em;
-    margin: 0;
+    color: black
   }
   i {
     color: #0065FC;
   }
-  p {
-    margin: 0;
+  ul {
+    list-style-type: none;
   }
-  ::placeholder {
-    color: black;
+  h1, h4 {
+    font-size: 1.375em;
   }
-  .score_container {
-    height: 1em;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+  h2, nav a, .infobar p, h5, footer li {
+    font-size: 1em;
   }
-  /* HEADER */
-  header img {
-    width: 5em;
-    object-fit: contain;
+  form, input, button, h3, .more {
+    font-size: 1.125em;
   }
-  nav a span {
-    padding-top: 2.9em;
-    border-top: 2px solid transparent;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+  main li {
+    font-size: 1.063em;
   }
-  nav a span:hover {
-    border-top: 2px solid #0065FC;
-    color: #0065FC;
-  }
-  /* MAIN-SEARCHBAR */
-  .searchbar {
-    display: flex;
-    align-items: center;
-  }
-  form {
-    width: auto;
-    display: flex;
-  }
-  .fa-location-dot {
-    color: black;
-    background-color: #f2f2f2;
-    border: 1px solid #F2F2F2;
-    border-radius: 15px 0px 0px 15px;
-    margin: auto;
-    padding: 1.1em
-  }
-  .searchbar input {
-    font-size: 1.1em;
-    font-weight: bold;
-    background-color: white;
-    border: 1px solid #F2F2F2;
-    text-align: center;
-  }
-  .searchbar button {
-    background-color: #0065FC;
-    font-weight: bold;
-    font-size: 1.1em;
-    border: 1px solid #0065FC;
-    border-radius: 0px 15px 15px 0px;
-    padding: 0.9em;
-    color: white;
-  }
-  .fa-magnifying-glass {
-    color: transparent;
-  }
-  /* FILTERBAR */
-  li, li i {
-    padding-inline: inherit;
-  }
-  li span {
-    width: 95%;
-    border: 2px solid #D9D9D9;
-    border-radius: 25px;
-    padding: 0.5em;
-    display: flex;
-    align-items: center;
-  }
-  li span:hover {
-    background-color: #DEEBFF;
-  }
-  .infobar span{
-    padding: 0.35em;
-    height: auto;
-    border: 1px solid #D9D9D9;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    margin-right: 1vw;
-  }
-  .infobar i {
-    padding: 0.5em 0.35em;
-  }
-  /* CARDS */
-  img {
-    object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
-  }
-  .booki {
-    border-radius: 0;
-  }
-  .score_container i:last-of-type {
-    color: #F2F2F2;
-  }
-  /* SECTION */
-  .hotel_images {
-    border: 5px solid #FFFFFF;
-  }
-  /* HEBERGEMENTS */
-  .hebergements_cards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 1.5vw;
-  }
-  .card {
-    min-width: 30.5%;
-    min-height: 25vh;
-    background-color: white;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  .card img {
-    min-width: 90%;
-    max-height: 9vw;
-  }
-  .card_info {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 0.25vw;
-    width: 90%;
-    min-height: 40%;
-    margin: auto;
-  }
-  /* POPULAIRES */
-  .popular_cards {
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5vw;
-    height: 100%;
-  }
-  .card_title {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .popular_card img {
-    width: 35%;
-    height: 90%;
-    border-radius: 20px 0px 0px 20px;
-  }
-  .popular_card {
-    width: 90%;
-    height: 24%;
-    background-color: white;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  .popular_card_info {
-    display: flex;
-    flex-direction: column;
-    height: 13vh;
-    width: 12.8vw;
-    margin: auto;
-  }
-  .card_info_text {
-    flex: 1;
-  }
-  .popular_card_info .score_container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    height: 1vw;
-  }
-  /* ACTIVITES */
-  .activites h5 {
-    padding-top: 0.5em;
-    margin: auto;
-    width: 90%;
-  }
-  .activites {
-    width: 100%;
-    height: auto;
-    background-color: white ;
-    flex-wrap: wrap;
-    margin-top: 5em;
-  }
-  .activites_cards {
-    display: flex;
-    flex-direction: row;
-    gap: 2.25vw;
-    flex-wrap: wrap;
-  }
-  .activites_card {
-    width: 22.9%;
-    height: auto;
-    background-color: white;
-    border: 0;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  .activites img {
-    width: 100%;
-    height: 90%;
-  }
-  /* FOOTER */
-  footer {
-    width: 90%;
-    height: auto;
-    background-color: #F2F2F2;
-    margin: auto;
-    margin-top: 5em;
-  }
-  .footer_container {
-    display: flex;
-    width: 90%;
-    margin: auto;
-    gap: 14em;
-  }
-  .footer_links {
-    display: flex;
-    flex-direction: column;
-  }
-  footer ul {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-  }
-  /* MEDIA QUERIES */
-  @media only screen and (min-width : 768px) and (max-width : 992px) {
-    h1, h4 {
-      font-size: 1.1em;
-    }
-    h2, .infobar p, h5, footer li {
-      font-size: 0.9em;
-    }
-    .searchbar input, h3, .searchbar span, .more {
-      font-size: 0.95em;
-    }
-    .hebergements p, .popular h5 {
-      font-size: 0.8em;
-    }
-    .popular p {
-      font-size: 0.75em;
-    }
-    .header img {
-      width: 3.5em;
-    }
-    nav {
-      width: 35%;
-    }
-    main ul {
-      width: 85%;
-      padding-left: 0.5em;
-    }
-    .filterbar li {
-      font-size: 0.9em;
-    }
-    .infobar {
-      width: 55%;
-    }
-    .hotels {
-      flex-wrap: wrap;
-    }
-    .hebergements {
-      width: 95%;
-    }
-    .card {
-      min-height: 20vh;
-      max-width: 30.5%;
-    }
-    .card img {
-      max-height: 12.25vh;
-    }
-    .popular {
-      width: 95%;
-      height: 30vh;
-    }
-    .popular_cards {
-      flex-direction: row;
-      gap: 1.25em;
-    }
-    .popular_card {
-      width: 26.5vw;
-      height: 15vh;
-    }
-    .popular_card img {
-      width: 40%;
-      height: 90%;
-    }
-    .popular_card_info {
-      height: 12vh;
-    }
-    .card_info_text p {
-      margin-top: 0.25em;
-      font-size: 0.65em;
-    }
-    .score_container {
-      height: 1.5em;
-      font-size: 0.75em;
-    }
-    .card_title {
-      width: 97%;
-    }
-    .activites_cards {
-      gap: 2em;
-      flex-wrap: nowrap;
-    }
-    .activites_card {
-      width: 22.25%;
-      height: 35vh;
-    }
-    .activites img {
-      height: 80%;
-    }
-    .activites h5 {
-      padding-top: 0.25em;
-      margin-left: 1em;
-      width: 70%;
-    }
-    .footer_container {
-      width: 80%;
-      gap: 3.5em;
-      padding-top: 2em;
-      padding-bottom: 2em;
-    }
-    footer ul {
-      width: 130%;
-      gap: 0.5em;
-    }
-  }
-  @media only screen and (min-width: 0) and (max-width: 767px) {
-    main {
-      margin: 0;
-      width: 95%;
-    }
-    header {
-      flex-direction: column;
-      margin: 0;
-      margin-top: 1em;
-    }
-    header img {
-      width: 4.75em;
-    }
-    .header_logo {
-      width: 10%;
-      margin: auto;
-    }
-    nav {
-      margin-top: 3em;
-      font-size: 1.1em;
-    }
-    nav a span {
-      padding-bottom: 1.5em;
-      padding-left: 13.75vw;
-      padding-right: 13.75vw;
-      border-top: 0;
-      border-bottom: 2px solid #F2F2F2;
-    }
-    nav a span:hover {
-      border-top: 0;
-      border-bottom: 2px solid #0065FC;
-    }
-    h1 {
-      font-size: 1.75em;
-    }
-    .top_container {
-      margin: 5vw;
-      margin-top: 15vw;
-    }
-    form {
-      height: 3.25em;
-    }
-    form span {
-      display: none;
-    }
-    form .fa-magnifying-glass {
-      color: white;
-    }
-    .searchbar input {
-      font-size: 1.2em;
-      padding-right: 2.5em;
-    }
-    .filterbar {
-      flex-direction: column;
-    }
-    .filterbar h3 {
-      align-self: flex-start;
-    }
-    main ul {
-      width: 85vw;
-      align-self: flex-start;;
-      flex-wrap: wrap;
-      gap: 1em;
-      padding: 0;
-      margin: auto;
-    }
-    .filterbar li {
-      font-size: 2.75vw;
-    }
-    .filterbar span {
-      width: 12.5em;
-      padding: 2vw;
-    }
-    .filterbar i {
-      font-size: 1.5em;
-      padding: 0.25em;
-      padding-right: 0.25em;
-    }
-    .infobar {
-      width: 90%;
-      margin: auto;
-      margin-top: 8vw;
-    } 
-    .hotels {
-      flex-direction: column-reverse;
-    }
-    .popular {
-      width: 100%;
-      padding-left: 0;
-      padding-bottom: 2em;
-      border-radius: 0;
-    }
-    .popular_cards {
-      width: 95%;
-      margin: auto;
-      gap: 5.5vw;
-    }
-    .popular_card {
-      width: 100%;
-      height: 23vh;
-    }
-    .card_info_text {
-      width: 90%;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5em;
-    }
-    .popular_card_info {
-      width: 50%;
-      height: 75%;
-    }
-     h5 {
-      font-size: 1.1em;
-    }
-    .hebergements {
-      width: 95%;
-      background-color: white;
-      border: 0;
-      padding-left: 0;
-      margin: 5vw;
-    }
-    .hebergements_cards {
-      flex-direction: column;
-      width: 100%;
-      gap: 5.5vw;
-    }
-    .card {
-      width: 100%;
-      height: 34vh;
-    }
-    .card img {
-      width: 97.5%;
-      max-height: 65%;
-    }
-    .card_info {
-      min-height: 30%;
-    }
-    .more {
-      display: none;
-    }
-    .activites {
-      width: 95%;
-      margin: 5vw;
-    }
-    .activites_title {
-      width: 50%;
-    }
-    .activites_title h4 {
-      margin-bottom: 5vw;
-    }
-    .activites_cards {
-      flex-direction: column;
-      height: 100%;
-      flex-wrap: nowrap;
-      gap: 5.5vw;
-    }
-    .activites_card {
-      width: 100%;
-      height: 34vh;
-    }
-    .activites img {
-      height: 70%;
-    }
-    .activites_card h5 {
-      padding-top: 1.25em;
-    }
-    footer {
-      margin: 0;
-      margin-top: 5em;
-      width: 85%;
-      padding: 2em;
-    }
-    .footer_container {
-      flex-direction: column;
-      gap: 1em;
-    }
+  .hotels p {
+    font-size: 0.875em;
   }
