--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,10 @@
   i {
     color: #0065FC;
   }
+  ::placeholder, .searchbar i {
+    color: black;
+    opacity: 1;
+  }
   ul {
     list-style-type: none;
   }
@@ -28,4 +32,17 @@
   }
   .hotels p {
     font-size: 0.875em;
+  }
+  /* HEADER */
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+  nav {
+    display: flex;
+    justify-content: space-between;
+    gap: 5em;
+  }
+  header img {
+    height: 1.5em;
   }
