:wrench: revue de code css
design de la barre d'information

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,19 +19,19 @@
     list-style-type: none;
   }
   h1, h4 {
-    font-size: 1.375em;
+    font-size: calc(0.7vw + 0.7em);
   }
   h2, nav a, .infobar p, h5, footer li {
-    font-size: 1em;
+    font-size: calc(0.525vw + 0.5em);
   }
   form, input, button, h3, .more {
     font-size: calc(0.5vw + 0.65em);
   }
   main li {
-    font-size: 1.063em;
+    font-size: calc(0.5vw + 0.59em);
   }
   .hotels p {
-    font-size: 0.875em;
+    font-size: calc(0.45vw + 0.45em);
   }
   /* HEADER */
   header {
@@ -47,9 +47,9 @@
     height: 1.5em;
   }
   /* PREMIERE PARTIE DU MAIN */
+  /* BARRE DE RECHERCHE */
   form {
     display: flex;
-    max-width: 32%;
   }
   .searchbar i {
     background-color: #F2F2F2;
@@ -71,4 +71,44 @@
     padding: 0.7em 1em;
     border: 1px solid #0065FC;
     border-radius: 0 15px 15px 0;
+  }
+  /* FILTRES */
+  .filterbar {
+    display: flex;
+  }
+  .filterbar ul {
+    display: flex;
+    padding-left: 1.5em;
+    margin: auto;
+    gap: 2.5em;
+    width: 95%;
+  }
+  .filterbar i {
+    margin: 0.25em;
+  }
+  li span {
+    border: 2px solid #D9D9D9;
+    border-radius: 20px;
+    padding: 0.5em 1em 0.5em 0.5em;
+  }
+  li span:hover {
+    background-color: #deebff;
+  }
+  /* BARRE INFO */
+  .infobar {
+    display: flex;
+  }
+  .infobar span {
+    height: auto;
+    border: 1px solid #D9D9D9;
+    border-radius: 25px;
+    padding: 0.25em;
+  }
+  .infobar i {
+    height: 0.45em;
+    padding: 0.5em 0.65em 0.5em 0.65em;
+  }
+  .infobar p {
+    margin: 0;
+    align-self: center;
   }
