--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,19 +19,22 @@
     list-style-type: none;
   }
   h1, h4 {
-    font-size: calc(0.7vw + 0.7em);
+    font-size: 1.57vw;
   }
   h2, nav a, .infobar p, h5, footer li {
-    font-size: calc(0.525vw + 0.5em);
+    font-size: 1.143vw;
   }
   form, input, button, h3, .more {
-    font-size: calc(0.5vw + 0.65em);
+    font-size: 1.296vw;
   }
   main li {
-    font-size: calc(0.5vw + 0.59em);
+    font-size: 1.214vw;
   }
   .hotels p {
-    font-size: calc(0.45vw + 0.45em);
+    font-size: 1vw;
+  }
+  img {
+    object-fit: cover;
   }
   /* HEADER */
   header {
@@ -44,7 +47,7 @@
     gap: 5em;
   }
   header img {
-    height: 1.5em;
+    height: 1.75vw;
   }
   /* PREMIERE PARTIE DU MAIN */
   /* BARRE DE RECHERCHE */
@@ -104,11 +107,101 @@
     border-radius: 25px;
     padding: 0.25em;
   }
-  .infobar i {
-    height: 0.45em;
-    padding: 0.5em 0.65em 0.5em 0.65em;
-  }
-  .infobar p {
-    margin: 0;
-    align-self: center;
-  }
+.infobar i {
+  height: 0.25em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+}
+.infobar p {
+  margin: 0 0 0 1em;
+  align-self: center;
+}
+/* CARTES DES HOTELS */
+.hotels {
+  display: flex;
+  gap: 3em;
+  width: 100%;
+}
+.hotels h4 {
+  margin: 0 0 1.5em 0;
+}
+h4.more {
+  margin: 2em 0 0 0;
+}
+.hotels h5, p {
+margin: 0;
+}
+.hotel_images {
+  object-fit: cover;
+}
+/* HEBERGEMENTS A MARSEILLE */
+.hebergements {
+  width: 70%;
+  background-color: #F2F2F2;
+  border-radius: 20px;
+  padding: 2em;
+}
+.hebergements_cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2vw;
+}
+.card {
+  background-color: #FFFF;
+  width: 30.95%;
+  height: 15vw;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.card img {
+  object-fit: cover;
+  height: 60%;
+  border: 5px solid #FFFF;
+  border-radius: 20px 20px 0 0;
+}
+/* LES PLUS POPULAIRES */
+.card_title {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+.popular {
+  width: 30%;
+  background-color: #F2F2F2;
+  border-radius: 20px;
+  padding: 2em;
+}
+.popular_cards {
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+}
+.popular_card {
+  display: flex;
+  width: 100%;
+  height: 10.25vw;
+  background-color: #FFFF;
+  border-radius: 20px;
+}
+.popular img {
+  min-width: 40%;
+  max-width: 40%;
+  height: 9.75vw;
+  border: 5px solid #FFFF;
+  border-radius: 20px 0 0 20px;
+}
+/* ACTIVITES A MARSEILLE */
+.activites_cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.75vw;
+}
+.activites_card {
+  width: 21.571vw;
+  height: 31.714vw;
+}
+.activites img {
+  height: 27.786vw;
+  width: 100%;
+}
